# ChromothripsisPredictor

./: README.md  pyproject.toml
.github/workflows/: training-pipline.yml
configs/: train.yaml  train_lstm_only.yaml
configs/data/: default.yaml
configs/model/: default.yaml
data/: default.yaml
notebooks/: bed_generator.ipynb  classic_ML_binary_models.ipynb
outputs/models/: best_sequence_checkpoint.pth  best_sequence_model.pth
scripts/: train.py
src/: BedGenerator.py
src/data/: datasets.py  feature_extractor.py  preprocessor.py  processing.py
src/models/: __init__.py  cnn_models.py  graph_models.py  hybrid_models.py  model_factory.py  sequence_models.py  transformer_models.py
src/training/: metrics.py  trainer.py
src/visualization/: plots.py
